# avr-template

./: CMakeLists.txt  LICENSE  Makefile  README.md
inc/: README.md
src/: README.md  main.c
